--- a/src/index.css
+++ b/src/index.css
@@ -8,37 +8,71 @@
 }
 
 .app {
-  min-height: 100vh;
+  position: relative;
+  height: 100vh;
+  /* display: flex; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.body {
+  width: 100%;
+  /* height: 100vh; */
   display: flex;
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   gap: 15px;
   padding: 15px;
+  width: 250px;
+  height: 100vh;
+  background-color: black;
 }
 
-.sidebar h1 {
-  color: #fff;
+/* Sidebar logo */
+.sidebar .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar .logo img {
+  max-inline-size: 80%;
+  block-size: auto;
+}
+
+/* Sidebar Menu */
+.sidebar .menu {
+  list-style: none;
+}
+
+.sidebar .menu li {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  padding: 15px 0px;
+  color: #b3b3b3;
+  cursor: pointer;
 }
 
 .sidebar button {
-  background: #111;
+  background: none;
   border: none;
   outline: none;
   width: 100%;
-  padding: 15px;
-  color: #fff;
+  color: #b3b3b3;
   cursor: pointer;
+  text-align: left;
 }
 
 .track-list {
   width: 100%;
-  background: #dedede;
-  max-height: 100vh;
+  background: linear-gradient(transparent, rgb(0, 0, 0)) rgb(32, 87, 100);
+  height: 100vh;
   overflow-y: auto;
 }
 
@@ -47,13 +81,103 @@
   list-style: none;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+
+.track-list ul:hover {
+  background: black;
+  cursor: pointer;
+}
+
+.track-list ul li.title {
+  flex: 1;
+  cursor: pointer;
+  display: flex;
+  gap: 15px;
+}
+
+.track-list ul li.title h6 {
+  flex: 1;
+  cursor: pointer;
+  display: flex;
+  gap: 15px;
+  font-weight: 300;
 }
 
 .track-list ul li {
   flex: 1;
   cursor: pointer;
 }
+
 .track-list ul li img {
   width: 60px;
   height: 60px;
+}
+
+/* FOOTER */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 55px;
+  width: 100%;
+  background: rgb(24, 24, 24);
+  border-top: 1px solid rgb(40, 40, 40);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.footer-track {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.footer-track .track-image {
+  width: 60px;
+  height: 60px;
+  background: red;
+}
+
+.footer-track .track-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.footer-track .track-title span {
+  font-size: 14px;
+  color: #b3b3b3;
+}
+
+.footer .footer-controls {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.footer .footer-controls .previous,
+.state,
+.next svg {
+  font-size: 2rem;
+  color: #b3b3b3;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.footer .footer-controls svg:hover {
+  color: #fff;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.shuffle,
+.repeat svg {
+  font-size: 1rem;
+  color: #b3b3b3;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
 }
